// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[postcss] mangle mangle case 0 1`] = `
".a {
  display: flex;
  align-items: center;
}

.a>.b {
  padding: 6px;
}

.a .b::after {
  content: "after";
}

.a label {
  margin-right: 8px;
}
/* mangle disabled */
.el-tree-node__content {
  color: red;
}
.happy {
  word: "have a nice day";
}
"
`;

exports[`[postcss] mangle mangle case with empty classGenerator 1`] = `
".el-tree-node__content {
  display: flex;
  align-items: center;
}

.el-tree-node__content>.el-tree-node__expand-icon {
  padding: 6px;
}

.el-tree-node__content .el-tree-node__expand-icon::after {
  content: "after";
}

.el-tree-node__content label {
  margin-right: 8px;
}
/* mangle disabled */
.el-tree-node__content {
  color: red;
}
.happy {
  word: "have a nice day";
}
"
`;

exports[`[postcss] mangle mangle-nested-with-comment 1`] = `
"/* mangle disabled 222 */
.el-tree-node__content {
  color: red;
}

/* mangle ignore 111 */
.el-tree-node__content {
  color: yellow;
}

.a {
  color: blue;
}
"
`;
